operator/pkg/gateway-api/testdata/gamma/mesh-matching/output/httproute-mesh-matching.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: mesh-matching
  namespace: gateway-conformance-mesh
  resourceVersion: "1000"
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo
    port: 80
  rules:
  - backendRefs:
    - name: echo-v1
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    - headers:
      - name: version
        value: one
  - backendRefs:
    - name: echo-v2
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /v2
    - headers:
      - name: version
        value: two
status:
  parents:
  - conditions:
    - lastTransitionTime: "2025-06-19T03:43:28Z"
      message: Accepted HTTPRoute
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-06-19T03:43:28Z"
      message: Service reference is valid
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: io.cilium/gateway-controller
    parentRef:
      group: ""
      kind: Service
      name: echo
      port: 80
